--- a/MDK-ARM/usb_button/usb_button.build_log.htm
+++ b/MDK-ARM/usb_button/usb_button.build_log.htm
@@ -26,6 +26,9 @@ Project File Date:  11/06/2019
 
 <h2>Output:</h2>
 Build target 'usb_button'
+compiling freertos.c...
+linking...
+Program Size: Code=14224 RO-data=348 RW-data=468 ZI-data=7084  
 "usb_button\usb_button.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
